operators/gitea/gitea-operator/src/main/resources/manifests/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "gitea"
  labels:
    app.kubernetes.io/component: git-server
    app.openshift.io/runtime: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "gitea"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: "gitea"
    spec:
      serviceAccountName: "gitea"
      containers:
      - name: gitea
        image: "quay.io/rhpds/gitea:1.23"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
          requests:
            cpu: "200m"
            memory: "1Gi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: gitea-repositories
          mountPath: /gitea-repositories
        - name: gitea-config
          mountPath: /home/gitea/conf
        #- name: trusted-ca
        #  mountPath: /etc/ssl/certs/service-ca-bundle-ocp.trust.crt
        #  subPath: service-ca-bundle-ocp.trust.crt
          #/etc/pki/ca-trust/extracted/pem
          readOnly: true
        lifecycle:
          postStart:
            exec:
              #giteacmd admin user create --username $ADMIN_USERNAME --password $ADMIN_PASSWORD --email $ADMIN_USERNAME@example.com --admin --must-change-password=false
              #ADMIN_ID=$(giteacmd admin user list --admin|grep $ADMIN_USERNAME|grep $ADMIN_USERNAME|awk -F ' ' '{print $1}') && if [[ $ADMIN_ID ]]; then giteacmd admin user change-password --username $ADMIN_USERNAME --password $ADMIN_PASSWORD;else giteacmd admin user create --username $ADMIN_USERNAME --password $ADMIN_PASSWORD --email $ADMIN_USERNAME@example.com --admin --must-change-password=false;fi
              #giteacmd admin user delete --username $ADMIN_USERNAME
              command: ["/bin/sh", "-c", "for i in {1..5}; do ADMIN_ID=$(giteacmd admin user list --admin|grep $ADMIN_USERNAME|grep $ADMIN_USERNAME|awk -F ' ' '{print $1}') && if [[ $ADMIN_ID ]]; then giteacmd admin user change-password --username $ADMIN_USERNAME --password $ADMIN_PASSWORD;else giteacmd admin user create --username $ADMIN_USERNAME --password $ADMIN_PASSWORD --email $ADMIN_USERNAME@example.com --admin --must-change-password=false;fi && break || sleep 10;done; if [[ $OIDC_CLIENT_I [...]
              #command: ["/bin/sh", "-c", "for i in {1..5}; do giteacmd admin user create --username $ADMIN_USERNAME --password $ADMIN_PASSWORD --email $ADMIN_USERNAME@example.com --admin --must-change-password=false && break || sleep 10;done; if [[ $OIDC_CLIENT_ID ]]; then for i in {1..5}; do giteacmd admin auth add-oauth --name devjoy-oidc --provider openidConnect --key $OIDC_CLIENT_ID --secret $OIDC_CLIENT_SECRET --auto-discover-url $OIDC_AUTO_DISCOVER_URL --scopes email profile && break || s [...]
      volumes:
      - name: gitea-repositories
        persistentVolumeClaim:
          claimName: "gitea-pvc"
      - name: gitea-config
        secret:
          secretName: "gitea-config"
          items:
            - key: app.ini
              path: app.ini
      - name: trusted-ca
        configMap:
          name: gitea-trust-bundle
          items:
            #- key: ca-bundle.crt
            #  path: ca-bundle-ocp.trust.crt
            #- key: service-ca.crt
            #  path: service-ca-bundle-ocp.trust.crt
