operators/gitea/gitea-operator/src/main/resources/manifests/gitea/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: "gitea"
  labels:
    app: "gitea"
spec:
  selector:
    app: "gitea"
  ports:
  - name: gitea
    port: 3000
    protocol: TCP
    targetPort: 3000
  sessionAffinity: None
  type: ClusterIP
